Changed the image issue by changing image links

--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Mac and Cheese</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Macaroni_and_cheese.jpg/800px-Macaroni_and_cheese.jpg" alt="Mac and Cheese" width="400">
-    <h5>By The Original uploader was Jmabel at English Wikipedia, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons</h5>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Original_Mac_n_Cheese_.jpg" alt="Mac and Cheese" width="400">
+    <h5>Texasfoodgawker, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons</h5>
     <br>
     <h2>Description</h2>
     <p>Mac and Cheese is a classic comfort food made with macaroni pasta and a creamy cheese sauce. It's a favorite among both kids and adults, perfect for a quick meal or a side dish.</p>    
