--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Lasagne_al_forno.jpg/800px-Lasagne_al_forno.jpg" alt="Lasagna" width="400"> 
-    <h5>jeffreyw, CC BY 2.0 <https://creativecommons.org/licenses/by/2.0>, via Wikimedia Commons</h5>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/ba/Lasagne_-_stonesoup.jpg" alt="Lasagna" width="400"> 
+    <h5>jules / stonesoup, CC BY 2.0 <https://creativecommons.org/licenses/by/2.0>, via Wikimedia Commons</h5>
     <br>
     <h2>Description</h2>
        <p>Lasagna is a classic Italian dish made with layers of pasta, meat, cheese, and tomato sauce. It's a hearty and comforting meal that is perfect for family gatherings or special occasions.</p>
