--- a/recipes/sandwhich.html
+++ b/recipes/sandwhich.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <h1>Sandwhich</h1>
-    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Sandwich.jpg/800px-Sandwich.jpg" alt="Sandwhich" width="400">
-    <h5>By The Original uploader was Jmabel at English Wikipedia, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons</h5>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/1/12/Sandwich.jpg" alt="Sandwhich" >
+    <h5>pdphoto.org, Public domain, via Wikimedia Commons</h5>> 
     <br>
 
     <h2>Description</h2>
